btn alignment fix

--- a/public/stylesheets/shared/buttons.css
+++ b/public/stylesheets/shared/buttons.css
@@ -1,6 +1,6 @@
 :root {
   --color-btn-primary-background: hsl(var(--color-base-hue), 100%, 83%);
-  --color-btn-primary-background-dark:hsl(var(--color-base-hue), 100%, 73%);
+  --color-btn-primary-background-dark: hsl(var(--color-base-hue), 100%, 73%);
   --color-btn-primary-text: hsl(var(--color-base-hue), 100%, 20%);
   --color-btn-primary-text-dark: hsl(var(--color-base-hue), 100%, 10%);
   --color-btn-border: black;
@@ -12,8 +12,8 @@
 
 .btn {
   border: 1px solid var(--color-btn-border);
-  border-radius: .5rem;
-  padding: .5rem 1rem;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
   font-size: 1.2rem;
   font-family: 'Gotham Rounded';
   cursor: pointer;
